// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsWithinCard component should render default view 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  key="Title"
  xs={12}
>
  <AdminCard
    accentHeader={true}
    title="Title"
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={1}
    >
      <Memo()
        groups={
          Array [
            Array [
              "test",
            ],
          ]
        }
      />
    </WithStyles(ForwardRef(Grid))>
  </AdminCard>
</WithStyles(ForwardRef(Grid))>
`;

exports[`GroupsWithoutCard component should render default view 1`] = `
<FieldGridItem
  field="test"
  group={
    Array [
      "test",
    ]
  }
  key="test"
/>
`;

exports[`Section component should render default view 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <Memo()
    disabled={false}
    key="Title"
    title="Title"
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`Section component should render default view 2`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={1}
>
  <Memo()
    disabled={false}
    key="0"
  />
</WithStyles(ForwardRef(Grid))>
`;
